bugfix, added custom scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,21 +3,46 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-      @apply dark:bg-black;
-      @apply dark:text-white;
-      /* @apply font */
-    }
-    h2 {
-      @apply font-bold text-5xl my-6;
-    }
-    .box-red {
-        @apply border border-red-600
-    }
-    strong {
-      @apply font-black
-    }
-    section p {
-      @apply text-justify;
-    }
+  body {
+    @apply dark:bg-black;
+    @apply dark:text-white;
+
+
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    @apply bg-black;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply bg-white bg-opacity-50
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-opacity-20
+  }
+
+  h2 {
+    @apply font-bold text-5xl my-6;
+  }
+
+  .box-red {
+    @apply border border-red-600
+  }
+
+  strong {
+    @apply font-black
+  }
+
+  section p {
+    @apply text-justify;
+  }
 }
